--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-preset-env": "^1.6.1",
     "flow-watch": "^1.1.1",
+    "remove-flow-types-loader": "^1.1.0",
     "webpack": "3.5.5"
   }
 }
